--- a/src/components/Loading_Overlay/LoadingOverlay.scss
+++ b/src/components/Loading_Overlay/LoadingOverlay.scss
@@ -12,19 +12,17 @@
     justify-content: center;
     align-items: center;
     z-index: 100;
-}
 
-.loader {
-    width: 50px;
-    height: 50px;
-    border: 4px solid $accent-color;
-    border-top-color: transparent;
-    border-radius: 50%;
-    animation: spin 0.7s linear infinite;
+    &__loader {
+        width: 50px;
+        height: 50px;
+        border: 4px solid $accent-color;
+        border-top-color: transparent;
+        border-radius: 50%;
+        animation: spin 0.7s linear infinite;
+    }
 }
 
 @keyframes spin {
-    to {
-        transform: rotate(360deg);
-    }
+    to { transform: rotate(360deg); }
 }
