--- a/src/components/Notifications/Notifications.scss
+++ b/src/components/Notifications/Notifications.scss
@@ -1,6 +1,6 @@
 @import '../../styles/variables';
 
-.notifications-wrapper {
+.notifications {
     position: fixed;
     top: 3.5rem;
     right: 20px;
@@ -8,21 +8,37 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-}
 
-.notification {
-    padding: 12px 18px;
-    border-radius: 8px;
-    color: $inverse-color;
-    font-size: 15px;
-    background: $main-text-color;
-    opacity: 0;
-    animation: fadeInOut 3s forwards;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-    position: relative;
-    overflow: hidden;
-    
-    .progress {
+    &__item {
+        padding: 12px 18px;
+        border-radius: 8px;
+        color: $inverse-color;
+        font-size: 15px;
+        background: $main-text-color;
+        opacity: 0;
+        animation: fadeInOut 3s forwards;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+        position: relative;
+        overflow: hidden;
+
+        &--success {
+            .notifications__progress { background: $highlight-color; }
+        }
+
+        &--error {
+            .notifications__progress { background: $accent-color; }
+        }
+
+        &--info {
+            .notifications__progress { background: $muted-text-color; }
+        }
+
+        &--warning {
+            .notifications__progress { background: $dark-accent-color; }
+        }
+    }
+
+    &__progress {
         position: absolute;
         bottom: 0;
         left: 0;
@@ -33,25 +49,7 @@
         animation-fill-mode: forwards;
         opacity: 1;
     }
-    
-    &.success {
-        .progress { background: $highlight-color; }
-    }
-
-    &.error {
-        .progress { background: $accent-color; }
-    }
-
-    &.info {
-        .progress { background: $muted-text-color; }
-    }
-
-    &.warning {
-        .progress { background: $dark-accent-color; }
-    }
 }
-
-
 
 @keyframes fadeInOut {
     0% { opacity: 0; transform: translateX(20px); }
